# trimmed-mesher

./: CMakeLists.txt  LICENSE  README.md
gui/: gui.py  process.py  theme.json  utils.py
src/: coarsening.c  coarsening.h  element.c  element.h  export.c  export.h  input.c  input.h  main.c  main.h  mesher.c  nearwall.c  nearwall.h  node.c  node.h  point.c  point.h  shock.c  shock.h  smoothing.c  smoothing.h
