cmake_minimum_required(VERSION 3.10)
project(MESHER VERSION 1.0 LANGUAGES C)
file(GLOB SOURCES "src/*.c")
add_executable(mesher ${SOURCES})

if(WIN32)
    set(CMAKE_SYSTEM_NAME Windows)
    target_link_libraries(mesher kernel32 user32 gdi32)
else()
    target_link_libraries(mesher m)
endif()

set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_FLAGS_RELEASE "-O3 -march=native -flto -funroll-loops")
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)